# fz

./: .bwconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  eli5-kdy-vs-4mk.html  eli5.html  fz.html  northstar.html  report.html  test_file_handle_.fz
.agent/: docs.md  rules.md  strategies.md
.githooks/: pre-commit
docs/: bodies-are-boundaries.md  cps-in-clif.md  descr-cleanup.md  dispatch-as-planner-output.md  dispatch-as-typer-output.md  matcher-migration-inventory.md  pattern-router-matcher.md  protocols.md  receive-matched-stress-test.html  receive-matched.md  single-authoritative-plan.md  spec-resolution-model.md  typer-authoritative-dispatch.md
fixtures/: GOLDEN.md  add1.clif  add1.fz  add1.specs  alias.fz  apply2.fz  attributes.expected  attributes.fz  callsite_narrowing_dist.fz  classify_two_clause.expected  classify_two_clause.fz  closure_typed_captures.clif  closure_typed_captures.fz  closure_typed_captures.specs  cold_fn.fz  concurrency_ping_pong.clif  concurrency_ping_pong.fz  concurrency_ping_pong.specs  cross_module_macro.fz  expect_clif_demo.fz  hello.expected  hello.fz  higher_order.clif  higher_order.fz  higher_order.specs  hot_fn.fz  id_int_atom.expected  id_int_atom.fz  import.fz  index.md  interp_only_main.fz  macro_inc.expected  macro_inc.fz  modules.fz  multi_clause.fz  nested_modules.expected  nested_modules.fz  polymorphic.expected  polymorphic.fz  sample_tests.fz  (+16 more)
fixtures2/: 00001_quicksort_plus_foo.fz  00002_types_top_level.fz  00003_type_refs.fz  00004_typedefs.fz  00005_brand.fz  00006_protocol_domain.fz  00007_runtime_refs.fz  00008_callsite_fact_surface.fz  00009_no_runtime.fz  00010_enum_reduce_main.fz  00011_cond_specialization.fz  00012_projection_boundary_abi.fz  00013_variadic_open.fz  00014_unresolved_callable_boundary.fz  00015_variadic_open_jit.fz  00016_spawn_then_receive.fz  00017_spawn_receive_assert.fz  00018_tail_recursion.fz  00019_quicksort_entry.fz  00020_quicksort_jit_entry.fz  00021_variadic_printf.fz  00022_typed_dispatch.fz  00023_backend_interp_self_send.fz  00024_backend_interp_spawn.fz  00025_backend_interp_spawn_opt.fz  00026_make_resource.fz  00027_foo_99.fz  00028_helper_roots.fz  00029_positive_gte.fz  00030_foo_42.fz  00031_local_lambda.fz  00032_lambda_recursion.fz  00033_clause_projections.fz  00034_lambda_capture.fz  00035_local_match.fz  00036_guard_helpers.fz  00037_guard_destructure.fz  00038_guard_cycle.fz  00039_guard_impure.fz  00040_entry_dispatch_aliases.fz  (+366 more)
guides/: externs.html  memory.html  modules.html  pattern-matching.html  processes.html  protocols.html  quicksort-without-temporaries.html  style.css
issues/: fz-02r.1.json  fz-02r.2.json  fz-02r.3.json  fz-02r.4.json  fz-02r.5.json  fz-02r.6.json  fz-02r.7.json  fz-02r.8.json  fz-02r.json  fz-086.1.json  fz-086.2.json  fz-086.3.json  fz-086.json  fz-0uu.json  fz-0z4.1.json  fz-0z4.2.json  fz-0z4.3.json  fz-0z4.4.json  fz-0z4.5.json  fz-0z4.6.json  fz-0z4.json  fz-191.json  fz-1gr.json  fz-1i0.json  fz-1pq.1.json  fz-1pq.2.json  fz-1pq.3.json  fz-1pq.4.json  fz-1pq.5.json  fz-1pq.6.json  fz-1pq.7.json  fz-1pq.8.json  fz-1pq.json  fz-1zz.json  fz-210.json  fz-2tc.json  fz-2wg.json  fz-2yw.json  fz-3f3.json  fz-3je.1.json  (+938 more)
runtime/: Cargo.toml  RUNNING_LOOM.md
runtime/src/: any_value.rs  any_value_test.rs  aot_shim.rs  aot_shim_test.rs  bitstr.rs  exec_ctx.rs  exec_ctx_test.rs  extern_binary.rs  extern_binary_test.rs  extern_variadic.rs  extern_variadic_test.rs  fz_value.rs  heap.rs  ir_runtime.rs  ir_runtime_test.rs  lib.rs  libc_io.rs  park.rs  park_test.rs  pinned_abi.rs  procbin.rs  procbin_test.rs  process.rs  process_abi.rs  process_abi_test.rs  process_test.rs  reductions.rs  resource.rs  resource_test.rs  sched.rs  sched_test.rs  scheduler_hooks.rs  shared_bin.rs  sync.rs  tagged_value_ref.rs  timer.rs  timer_test.rs  yield_flag.rs
runtime/src/heap/: block_pool.rs  deep_copy.rs  fragment.rs  heap.rs  heap_test.rs  imp.rs  key_cmp.rs  mod.rs  ref_io.rs  schema.rs  stats.rs  tests.rs
runtime/src/heap/gc/: forward.rs  forwarding.rs  mod.rs  trace.rs
spike/: README.md  enum_reduce_named_ref.fz  enum_reduce_range.fz  fold_capture_closure.fz  fold_capture_int.fz  fold_nontail.fz  fold_state_machine.fz  match_atom_partition.fz  match_guard_partition.fz  match_list_binding.fz  match_list_partition.fz  match_map_binding.fz  match_nested_binding.fz  match_nested_partition.fz  match_tuple_arity_partition.fz  match_tuple_binding.fz  match_tuple_tag_partition.fz  poly_capture_ref.fz  poly_id.fz  poly_named_ref.fz  poly_named_ref_pattern.fz
src/: aot.rs  (+82 more)
(+1303 files in other folders)
