[package]
name = "fz"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["runtime"]

[dependencies]
cranelift-codegen = { version = "0.131", features = ["disas"] }
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-object = "0.131"
object = { version = "0.39", features = ["write"] }
cranelift-jit = "0.131"
cranelift-native = "0.131"
target-lexicon = "0.13"
fz-runtime = { path = "runtime" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
