[package]
name = "fz-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Used by runtime-side libc shims (resource lifecycle helpers in
# fz-swt.13, plus the extern-binary integration fixture in fz-vw1).
# The host crate (`fz`) also depends on libc; having it here keeps the
# runtime-side helpers self-contained.
libc = "0.2"

[dev-dependencies]
# fz-q8d.1 — used by tests that baseline-delta against the global
# `procbin::live_count` gauge. The earlier `live_count_lock` global
# mutex is gone; tests that need exclusive access serialise via
# `#[serial_test::serial]` instead.
serial_test = "3"

# fz-q8d.3 — loom model-checker for SharedBin retain/release ordering.
# Default builds (no `--cfg loom`) do not pull this dep at all; under
# `RUSTFLAGS="--cfg loom"` it replaces `std::sync::atomic` via the
# `crate::sync` re-export module so loom can exhaustively explore
# every legal thread interleaving. See `runtime/RUNNING_LOOM.md`.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

# fz-q8d.3 — silence rustc's unexpected_cfgs lint for the loom cfg seam.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
